--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ BOB_BGS_ALGORITHM="vibe"
 BOB_TRACKING_SENSITIVITY="'medium_c'"
 BOB_TRACKING_SENSITIVITY_AUTOTUNE="True"
 
+# Enabling or disabling of the star mask
+BOB_ENABLE_STAR_MASK="True"
+
 # Video files list separated by ';' 
 # These videos are included in the production container for testing purposes
 BOB_VIDEOS="/workspaces/bobcamera/media/fisheye_videos/mike-drone.mp4;/workspaces/bobcamera/media/fisheye_videos/mikeg-30min.mp4"
@@ -31,3 +34,7 @@ BOB_SIMULATION_NUM_OBJECTS="15"
 
 # Operational mode options: standard, headless
 BOB_OPERATION_MODE="'standard'"
+
+# Log level for Bob to help with debugging
+# Options: DEBUG, INFO, WARN, ERROR or FATAL
+BOB_LOGLEVEL="INFO"
