--- a/docker/docker-compose-demo.yaml
+++ b/docker/docker-compose-demo.yaml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   web:
-    image: bobcamera/bob-web-prod:1.2.15
+    image: bobcamera/bob-web-prod:1.2.16
     #user: ${MY_UID}:${MY_GID}
     ports:
       - "8080:80"
     depends_on:
       - bob
   bob:
-    image: bobcamera/bob-ros2-prod:1.2.15
+    image: bobcamera/bob-ros2-prod:1.2.16
     #user: ${MY_UID}:${MY_GID}
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -24,8 +24,10 @@ services:
       - BOB_BGS_ALGORITHM=vibe
       - BOB_TRACKING_SENSITIVITY='medium'
       - BOB_TRACKING_SENSITIVITY_AUTOTUNE=False
+      - BOB_ENABLE_STAR_MASK=${BOB_ENABLE_STAR_MASK:-False}
       - BOB_VIDEOS=/workspaces/bobcamera/media/fisheye_videos/mike-drone.mp4;/workspaces/bobcamera/media/fisheye_videos/mikeg-30min.mp4
       - BOB_SIMULATION_NUM_OBJECTS=25
+      - BOB_LOGLEVEL=INFO
       - RMW_IMPLEMENTATION=rmw_fastrtps_cpp
       - FASTRTPS_DEFAULT_PROFILES_FILE=/workspaces/bobcamera/src/ros2/config/fastdds.xml
     volumes: 
